--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "compression": "^1.7.1",
-    "gray-matter": "^4.0.2",
+    "date-fns": "^2.25.0",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.19",
-    "marked": "^2.0.1",
+    "marked": "^3.0.7",
     "polka": "next",
+    "prismjs": "^1.25.0",
     "reading-time": "^1.3.0",
     "sirv": "^0.4.0"
   },
@@ -35,6 +37,7 @@
     "npm-run-all": "^4.1.5",
     "rollup": "^1.20.0",
     "rollup-plugin-babel": "^4.0.2",
+    "rollup-plugin-glob": "^1.0.2",
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.0",
