--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -27,7 +27,7 @@
     "tags": ["Svelte", "Sapper", "Github Pages"],
     "thumb": "/images/undraw_web_developer_p3e5.png",
     "description": "My personal website where I occasionally add some projects and articles.",
-    "homePage": "https://1140251.github.io"
+    "homePage": "https://github.com/1140251/1140251.github.io"
   },
   {
     "title": "The Twenties",
