--- a/package.json
+++ b/package.json
@@ -1,47 +1,45 @@
 {
-  "name": "1140251.github.io",
-  "description": "1140251.github.io",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "start:export": "npx serve -n __sapper__/export",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "compression": "^1.7.1",
-    "date-fns": "^2.25.0",
-    "gray-matter": "^4.0.3",
-    "lodash": "^4.17.19",
-    "marked": "^3.0.7",
-    "node-emoji": "^1.11.0",
-    "polka": "next",
-    "prismjs": "^1.25.0",
-    "reading-time": "^1.3.0",
-    "sirv": "^0.4.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-json": "^4.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@rollup/plugin-replace": "^2.2.0",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^1.20.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-glob": "^1.0.2",
-    "rollup-plugin-svelte": "~6.1.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
-  }
+	"name": "1140251.github.io",
+	"description": "1140251.github.io",
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"lint": "prettier --check --plugin-search-dir=. .",
+		"format": "prettier --write --plugin-search-dir=. .",
+		"deploy": "npm run build && gh-pages -b master -d build -t"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-static": "^1.0.0-next.9",
+		"@types/grecaptcha": "^3.0.3",
+		"axios": "^0.21.1",
+		"date-fns": "^2.25.0",
+		"node-emoji": "^1.11.0",
+		"reading-time": "^1.5.0",
+		"to-vfile": "^7.2.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.10.2",
+		"@sveltejs/kit": "1.0.0-next.201",
+		"@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+		"@tsconfig/svelte": "^1.0.10",
+		"@types/node": "^14.11.1",
+		"@types/node-emoji": "^1.8.1",
+		"gh-pages": "^3.1.0",
+		"mdsvex": "^0.9.0",
+		"prettier": "^2.4.1",
+		"prettier-plugin-svelte": "^2.4.0",
+		"pug": "^3.0.2",
+		"rehype-autolink-headings": "^5.0.1",
+		"rehype-slug": "^4.0.1",
+		"remark-abbr": "^1.4.1",
+		"remark-github": "^10.0.1",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.9.4",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.3"
+	}
 }
