--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '16.x'
       - run: npm install
-      - run: npm run deploy
+      - run: npm run build
       - name: Build and Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
