--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
 		"build": "svelte-kit build",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. .",
-		"deploy": "npm run build && gh-pages -b master -d build -t"
+		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.9",
