--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,7 @@ jobs:
       - run: npm install
       - run: npm run build
       - name: 'Deploy to Netlify'
-        steps:
-          - uses: jsmrcaga/action-netlify-deploy@v1.1.0
-            with:
-              NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
-              NETLIFY_DEPLOY_TO_PROD: true
+        uses: jsmrcaga/action-netlify-deploy@v1.1.0
+        with:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
+          NETLIFY_DEPLOY_TO_PROD: true
